# AndriodAVDClient

./: CMakeLists.txt  README.md  history.txt
cmake/: project_utils.cmake
libs/: CMakeLists.txt
libs/nx_build_info/: CMakeLists.txt  build_info.cpp.in
libs/nx_build_info/src/nx/: build_info.h
src/: main.cpp  main.h
src/dataentrymodel/: dataentrymodel.cpp  dataentrymodel.h
src/example/: example3.h
src/qml/: ListDelegate.qml  ListHighlight.qml  main.qml  qml.qrc
